<?xml version="1.0"?>
<package>
  <name>librosqt</name>
  <version>0.0.0</version>
  <description>A library that helps to merge the event loops of Qt and ROS</description>

  <maintainer email="rov@robopec.com">Robin Vanhove</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
